This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

01-Mar-2002 (Lars Duening)  (3.3.405)
  - (func_spec, object) New efun variable_exists() and
       variable_list().

27-Feb-2002 (Lars Duening)  (3.3.404)
  - (interpret.c) Improved the error message for when 'mapping[a,b]' is used
       with incorrect types at runtime.

27-Feb-2002 (Lars Duening)  (3.3.403)
  - (gcollect.c, swap.c, mempools) During a the GC a new swap membuffer could
       be allocated and then marked 'unreferenced' by the GC, subsequently
       causing memory corruption as the swapper continued to use it. The
       memory buffers are now held on to during the GC and only freed
       afterwards.

24-Feb-2002 (Lars Duening)  (3.3.402)
  - (strfuns.c) Made the strbuf allocations resilient against out-of-memory
       conditions.
  - (xalloc) rexalloc() now accepts the MALLOC_TRACE information. The
       normal implementation doesn't use it, but they are useful when
       instrumenting the allocator code.

24-Feb-2002 (Lars Duening)  (3.3.401)
  - (interpret.c) With special reference indexing of struct members,
       the struct refcount was decremented once too often.

23-Feb-2002 (Lars Duening)  (3.3.400)
  - (smalloc.c, xalloc.c) Corrected two fatal typos.

23-Feb-2002 (Lars Duening)  (3.3.399)
  - (smalloc.c, xalloc.c) All esbrk() requests are logged on stdout
       as 'DEBUG: MEM ...' messages. This is to find out why certain
       muds use so much memory lately.

21-Feb-2002 (Lars Duening)  (3.3.398)
  - (mempools.c) Corrected a compilation problem.

21-Feb-2002 (Lars Duening)  (3.3.397)
  - (lex.c) Macro __MSDOS_FS__ is defined on systems using the
       MS-DOS filesystem conventions.

20-Feb-2002 (Lars Duening)  (3.3.396)
  - (mempools, efuns.c) Added the table sizes to the debug_info(DINFO_DATA,
       DID_STATUS) result.

20-Feb-2002 (Lars Duening)  (3.3.395)