@@ -51,12 +51,13 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 405)
-(Parent-Version lpmud 3-3 404)
-(Version-Log "New efuns variable_list() and variable_exists().")
+(Project-Version lpmud 3-3 406)
+(Parent-Version lpmud 3-3 405)
+(Version-Log "Corrected a bug in the GC of structs.
+Corrected a memory leak in m_add().")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 01 Mar 2003 02:34:36 -0700")
+(Checkin-Time "Sun, 02 Mar 2003 01:35:04 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -93,8 +94,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.468 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.303 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.469 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.304 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -176,7 +177,7 @@
   (src/files.c (lpmud/i/50_files.c 1.20 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.14 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.94 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.95 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -189,7 +190,7 @@
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.36 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.14 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.55 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.56 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.6 644))
@@ -273,7 +274,7 @@
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.71 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
-  (src/structs.c (lpmud/d/b/6_structs.c 1.7 644))
+  (src/structs.c (lpmud/d/b/6_structs.c 1.8 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.1 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.3 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
